// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cursor char renders as expected 1`] = `
<Cursor
  char="t"
>
  <span
    className="Console-Cursor Console-Cursor--write"
  >
    t
  </span>
</Cursor>
`;

exports[`Cursor classes renders as expected 1`] = `
<span
  className="test-element"
>
   
</span>
`;

exports[`Cursor empty renders as expeted 1`] = `
<span
  className="Console-Cursor"
>
   
</span>
`;
